# SuperGlueCpp

./: .gitignore  CMakeLists.txt  README.md  demo_superglue.ipynb  demo_superpoint.py
include/: SuperGlue.h  SuperGlueLibtorch.h  SuperGluePyWrap.h
models/: SuperGlueWrapper.py
src/: SuperGlue.cpp  SuperGlueLibtorch.cpp  SuperGluePyWrap.cpp  demo.cpp  demoLibtorch.cpp  demoPyWrap.cpp
